...
        android:backgroundTint="@color/ButtonGrey"
        android:text="@string/menu_usuario"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/CollectorManuButton"
        android:layout_width="wrap_content"
        android:maxWidth="250dp"
        android:minHeight="100dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_coleccionista"
        android:layout_below="@id/MenuUserButton"
...
