...
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/album_tracks_rv"
                tools:layout_editor_absoluteX="0dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/album_comments_Rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:maxHeight="5dp"
                tools:listitem="@layout/album_detail_comments_item"
                app:layout_constraintTop_toBottomOf="@+id/title_comments_tv"
                tools:layout_editor_absoluteX="0dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:src="@drawable/baseline_add_circle_24"
...
